--- a/assets/style.css
+++ b/assets/style.css
@@ -3,3 +3,13 @@
     margin: 0;
     padding: 0;
 }
+nav{
+
+    height: 80px;
+    background-color: aqua;
+}
+.cards{
+    width: 150px;
+    background-color: bisque;
+    
+}
